[vim] committia.vim追加

--- a/vimfiles/dein/nvim/dein.toml
+++ b/vimfiles/dein/nvim/dein.toml
@@ -55,3 +55,23 @@ repo = 'tpope/vim-abolish'
 
 [[plugins]]
 repo = 'bronson/vim-visual-star-search'
+
+[[plugins]]
+repo = 'rhysd/committia.vim'
+hook_source = '''
+function! g:committia_hooks.edit_open(info)
+    " Additional settings
+    setlocal spell
+    setlocal spelllang+=cjk
+
+    " If no commit message, start with insert mode
+    if a:info.vcs ==# 'git' && getline(1) ==# ''
+        startinsert
+    end
+
+    " Scroll the diff window from insert mode
+    " Map <C-n> and <C-p>
+    imap <buffer><C-n> <Plug>(committia-scroll-diff-down-half)
+    imap <buffer><C-p> <Plug>(committia-scroll-diff-up-half)
+endfunction
+'''
