--- a/vimfiles/dein/nvim/dein.toml
+++ b/vimfiles/dein/nvim/dein.toml
@@ -67,3 +67,6 @@ repo      = 'luochen1990/rainbow'
 hook_add = '''
 let g:rainbow_active = 1
 '''
+
+[[plugins]]
+repo = 'yuttie/comfortable-motion.vim'
