--- a/vimfiles/dein/nvim/dein_lazy.toml
+++ b/vimfiles/dein/nvim/dein_lazy.toml
@@ -2,6 +2,9 @@
 [[plugins]]
 repo      = 'scrooloose/nerdcommenter'
 on_map    = ['<Plug>NERDCommenterToggle']
+hook_source = '''
+let g:NERDSpaceDelims = 1
+'''
 
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
