[vim] プラグイン設定移動

--- a/vimfiles/dein/nvim/dein.toml
+++ b/vimfiles/dein/nvim/dein.toml
@@ -49,6 +49,21 @@ repo = 'kana/vim-textobj-user'
 
 [[plugins]]
 repo = 'osyo-manga/vim-anzu'
+hook_add = '''
+nmap n nzz<Plug>(anzu-update-search-status)<Plug>(anzu-echo-search-status)
+nmap N Nzz<Plug>(anzu-update-search-status)<Plug>(anzu-echo-search-status)
+nmap * *zz<Plug>(anzu-update-search-status)<Plug>(anzu-echo-search-status)
+nmap # #zz<Plug>(anzu-update-search-status)<Plug>(anzu-echo-search-status)
+" clear status
+nmap <Esc><Esc> :nohl<CR> <Plug>(anzu-clear-search-status)
+augroup vim-anzu
+" 一定時間キー入力がないとき、ウインドウを移動したとき、タブを移動したときに
+" 検索ヒット数の表示を消去する
+    autocmd!
+    autocmd CursorHold,CursorHoldI,WinLeave,TabLeave * call anzu#clear_search_status()
+augroup END
+
+'''
 
 [[plugins]]
 repo = 'vim-airline/vim-airline'
