[vim] プラグインの設定移動

--- a/vimfiles/dein/nvim/dein.toml
+++ b/vimfiles/dein/nvim/dein.toml
@@ -62,7 +62,6 @@ augroup vim-anzu
     autocmd!
     autocmd CursorHold,CursorHoldI,WinLeave,TabLeave * call anzu#clear_search_status()
 augroup END
-
 '''
 
 [[plugins]]
@@ -70,6 +69,22 @@ repo = 'vim-airline/vim-airline'
 
 [[plugins]]
 repo = 'LeafCage/yankround.vim'
+hook_add = '''
+" vimRだとpをマッピングするとMacのクリップボードと連携できないっぽい
+if !has("gui_vimr")
+  " yankround
+  nmap p <Plug>(yankround-p)
+  xmap p <Plug>(yankround-p)
+  " nmap P <Plug>(yankround-P)
+  nmap gp <Plug>(yankround-gp)
+  xmap gp <Plug>(yankround-gp)
+  nmap gP <Plug>(yankround-gP)
+  " M-p
+  nmap π <Plug>(yankround-prev)
+  " M-n
+  nmap ˜ <Plug>(yankround-next)
+endif
+'''
 
 [[plugins]]
 repo = 'tpope/vim-abolish'
