--- a/.ideavimrc
+++ b/.ideavimrc
@@ -52,6 +52,9 @@ inoremap <C-d> <Del>
 inoremap <C-k> <C-o>D<Right>
 inoremap <C-u> <C-o>d^
 inoremap <C-w> <C-o>db
+
+imap jj <Esc>
+
 " Moving blocks of text in visual mode
 vnoremap < <gv
 vnoremap > >gv
