[shell] rmtrash -> trash

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -13,7 +13,7 @@ brew "node"
 brew "python"
 brew "reattach-to-user-namespace"
 brew "rlwrap"
-brew "rmtrash"
+brew "trash"
 brew "romkatv/powerlevel10k/powerlevel10k"
 brew "source-highlight"
 brew "the_silver_searcher"
