--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -11,14 +11,15 @@ brew "gnu-sed"
 brew "neovim"
 brew "node"
 brew "python"
+brew "ranger"
 brew "reattach-to-user-namespace"
 brew "rlwrap"
-brew "trash"
 brew "romkatv/powerlevel10k/powerlevel10k"
 brew "source-highlight"
 brew "the_silver_searcher"
 brew "tig"
 brew "tmux"
+brew "trash"
 brew "zsh"
 
 cask "alfred"
