--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -520,7 +520,8 @@ map yj  eval fm.copy(dirarg=dict(down=1), narg=quantifier)
 map yk  eval fm.copy(dirarg=dict(up=1), narg=quantifier)
 
 # Searching
-map /  console search%space
+# https://lists.gnu.org/archive/html/ranger-users/2015-11/msg00005.html
+map /  console search_inc%space
 map n  search_next
 map N  search_next forward=False
 map ct search_next order=tag
