--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -22,9 +22,8 @@ brew "tmux"
 brew "trash"
 brew "zsh"
 
-cask "alfred"
 cask "atom"
 cask "clipy"
 cask "google-chrome"
 cask "iterm2"
-cask "joplin"
+cask "obsidian"
