--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "submodules/f-sy-h"]
 	path = submodules/f-sy-h
 	url = https://github.com/z-shell/F-Sy-H
+[submodule "submodules/zsh-background-notify"]
+	path = submodules/zsh-background-notify
+	url = https://github.com/t413/zsh-background-notify.git
