--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -8,6 +8,7 @@ brew "dust"
 brew "emacs-plus", args: ["with-spacemacs-icon"]
 brew "exa"
 brew "fzf"
+brew "gh"
 brew "git"
 brew "gnu-sed"
 brew "neovim"
