--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,7 +1,7 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "neovim/neovim"
-tap d12frosted/emacs-plus
+tap "d12frosted/emacs-plus"
 
 brew "bat"
 brew "dust"
@@ -13,7 +13,6 @@ brew "git"
 brew "gnu-sed"
 brew "neovim"
 brew "node"
-brew "python"
 brew "ranger"
 brew "reattach-to-user-namespace"
 brew "rlwrap"
