--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9143,157 +9143,157 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.20856963098049164</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.22283002734184265</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.20568123459815979</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.38021323084831238</real>
+				<real>0.47843137254901963</real>
 				<key>Green Component</key>
-				<real>0.24660280346870422</real>
+				<real>0.47843137254901963</real>
 				<key>Red Component</key>
-				<real>0.81089001893997192</real>
+				<real>0.72156862745098038</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.17100538313388824</real>
+				<real>0.74117647058823533</real>
 				<key>Green Component</key>
-				<real>0.49610027670860291</real>
+				<real>0.85882352941176465</real>
 				<key>Red Component</key>
-				<real>0.46425256133079529</real>
+				<real>0.74117647058823533</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.1833186000585556</real>
+				<real>0.74117647058823533</real>
 				<key>Green Component</key>
-				<real>0.35025951266288757</real>
+				<real>0.85882352941176465</real>
 				<key>Red Component</key>
-				<real>0.46875584125518799</real>
+				<real>0.85882352941176465</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.47479093074798584</real>
+				<real>0.85882352941176465</real>
 				<key>Green Component</key>
-				<real>0.34725069999694824</real>
+				<real>0.74117647058823533</real>
 				<key>Red Component</key>
-				<real>0.074933364987373352</real>
+				<real>0.74117647058823533</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56739711761474609</real>
+				<real>0.85882352941176465</real>
 				<key>Green Component</key>
-				<real>0.25756442546844482</real>
+				<real>0.74117647058823533</real>
 				<key>Red Component</key>
-				<real>0.37626489996910095</real>
+				<real>0.85882352941176465</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.79221165180206299</real>
+				<real>0.85882352941176465</real>
 				<key>Green Component</key>
-				<real>0.73511248826980591</real>
+				<real>0.85882352941176465</real>
 				<key>Red Component</key>
-				<real>0.46331635117530823</real>
+				<real>0.74117647058823533</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.68263441324234009</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.71090340614318848</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.6965288519859314</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.35710996389389038</real>
+				<real>0.47843137254901963</real>
 				<key>Green Component</key>
-				<real>0.71854472160339355</real>
+				<real>0.72156862745098038</real>
 				<key>Red Component</key>
-				<real>0.48304364085197449</real>
+				<real>0.47843137254901963</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.16496320068836212</real>
+				<real>0.47843137254901963</real>
 				<key>Green Component</key>
-				<real>0.70341014862060547</real>
+				<real>0.72156862745098038</real>
 				<key>Red Component</key>
-				<real>0.91225624084472656</real>
+				<real>0.72156862745098038</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.82943236827850342</real>
+				<real>0.72156862745098038</real>
 				<key>Green Component</key>
-				<real>0.60329484939575195</real>
+				<real>0.47843137254901963</real>
 				<key>Red Component</key>
-				<real>0.29914027452468872</real>
+				<real>0.47843137254901963</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.76894307136535645</real>
+				<real>0.72156862745098038</real>
 				<key>Green Component</key>
-				<real>0.49908417463302612</real>
+				<real>0.47843137254901963</real>
 				<key>Red Component</key>
-				<real>0.64749133586883545</real>
+				<real>0.72156862745098038</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.67739421129226685</real>
+				<real>0.72156862745098038</real>
 				<key>Green Component</key>
-				<real>0.60572487115859985</real>
+				<real>0.72156862745098038</real>
 				<key>Red Component</key>
-				<real>0.22138151526451111</real>
+				<real>0.47843137254901963</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.96549803018569946</real>
+				<real>0.85098039215686272</real>
 				<key>Green Component</key>
-				<real>0.98070180416107178</real>
+				<real>0.85098039215686272</real>
 				<key>Red Component</key>
-				<real>0.98026049137115479</real>
+				<real>0.85098039215686272</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.34851333498954773</real>
+				<real>0.14901960784313725</real>
 				<key>Green Component</key>
-				<real>0.3565424382686615</real>
+				<real>0.14901960784313725</real>
 				<key>Red Component</key>
-				<real>0.34871619939804077</real>
+				<real>0.14901960784313725</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.651419997215271</real>
+				<real>0.74117647058823533</real>
 				<key>Green Component</key>
-				<real>0.55888265371322632</real>
+				<real>0.74117647058823533</real>
 				<key>Red Component</key>
-				<real>0.81987529993057251</real>
+				<real>0.85882352941176465</real>
 			</dict>
 			<key>BM Growl</key>
 			<true/>
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.11759774386882782</real>
+				<real>0.14901960784313725</real>
 				<key>Green Component</key>
-				<real>0.11759574711322784</real>
+				<real>0.098039215686274508</real>
 				<key>Red Component</key>
-				<real>0.11759926378726959</real>
+				<real>0.050980392156862744</real>
 			</dict>
 			<key>Background Image Location</key>
 			<string></string>
@@ -9318,10 +9318,14 @@
 			<false/>
 			<key>Bold Color</key>
 			<dict>
-				<key>Blue Component</key>
-				<real>0.98028081655502319</real>
-				<key>Green Component</key>
+				<key>Alpha Component</key>
 				<real>1</real>
+				<key>Blue Component</key>
+				<real>0.99999994039535522</real>
+				<key>Color Space</key>
+				<string>sRGB</string>
+				<key>Green Component</key>
+				<real>0.99999994039535522</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
@@ -9336,11 +9340,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.31030187010765076</real>
+				<real>0.94901960784313721</real>
 				<key>Green Component</key>
-				<real>0.81186991930007935</real>
+				<real>0.90196078431372551</real>
 				<key>Red Component</key>
-				<real>0.92885816097259521</real>
+				<real>0.85098039215686272</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -9358,11 +9362,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.20856963098049164</real>
+				<real>0.14901960784313725</real>
 				<key>Green Component</key>
-				<real>0.22283002734184265</real>
+				<real>0.098039215686274508</real>
 				<key>Red Component</key>
-				<real>0.20568123459815979</real>
+				<real>0.050980392156862744</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>1</integer>
@@ -9381,11 +9385,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.9264865517616272</real>
+				<real>0.94901960784313721</real>
 				<key>Green Component</key>
-				<real>0.96665072441101074</real>
+				<real>0.90196078431372551</real>
 				<key>Red Component</key>
-				<real>0.97033727169036865</real>
+				<real>0.85098039215686272</real>
 			</dict>
 			<key>Guid</key>
 			<string>A84A53A4-8781-43E0-A606-0B217F28D1A6</string>
@@ -9690,7 +9694,7 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.73422712087631226</real>
+				<real>0.73422706127166748</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
@@ -9726,21 +9730,29 @@
 			<integer>1000</integer>
 			<key>Selected Text Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.9264865517616272</real>
+				<real>0.0</real>
+				<key>Color Space</key>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.96665072441101074</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.97033727169036865</real>
+				<real>0.0</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.46659797430038452</real>
+				<real>1</real>
+				<key>Color Space</key>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.34349527955055237</real>
+				<real>0.86943882703781128</real>
 				<key>Red Component</key>
-				<real>0.089366093277931213</real>
+				<real>0.75743567943572998</real>
 			</dict>
 			<key>Send Code When Idle</key>
 			<false/>
