[submodules] used-mem削除

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,7 +98,7 @@ set -g status-left "#[fg=green]Session: #S #[fg=yellow]Window: #I #[fg=cyan]Pane
 
 ## 右パネルを設定する
 # set -g status-right "Mem: #(used-mem) #[fg=magenta][%Y-%m-%d(%a) %H:%M]"
-set -g status-right "#[fg=blue][Cpu: #{cpu_percentage}]#[fg=magenta][Mem: #(used-mem)]"
+set -g status-right "#[fg=blue]"
 
 # ウィンドウ名が実行中のコマンド名になるのを止める
 # setw -g automatic-rename off
