[tmux] iTerm2のログイン時にtmuxが始まらない問題対応

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,6 +92,11 @@ set-option -g status-position bottom
 # status line の背景色を指定する。
 set-option -g status-style fg=white,bg=black
 
+# tmuxウィンドウのタイトルをiTerm2タブ/ウィンドウのタイトルとして表示される
+# https://qiita.com/yamasaki-masahide/items/2a9991631fc06cbbc345
+set-option -g set-titles on
+set-option -g set-titles-string '#T'
+
 ## 左パネルを設定する
 set -g status-left-length 40
 set -g status-left "#[fg=green]Session: #S #[fg=yellow]Window: #I #[fg=cyan]Pane: #P #{prefix_highlight}"
