--- a/.ideavimrc
+++ b/.ideavimrc
@@ -53,6 +53,10 @@ inoremap <C-k> <C-o>D<Right>
 inoremap <C-u> <C-o>d^
 inoremap <C-w> <C-o>db
 
+" https://youtrack.jetbrains.com/issue/VIM-1639
+nnoremap <c-o> :action Back<cr>
+nnoremap <c-i> :action Forward<cr>
+
 imap jj <Esc>
 
 " Moving blocks of text in visual mode
