--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,16 +1,12 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
-tap "neovim/neovim"
-tap "d12frosted/emacs-plus"
 
 brew "bat"
 brew "dust"
-brew "emacs-plus", args: ["with-spacemacs-icon"]
 brew "exa"
 brew "fzf"
 brew "gh"
 brew "git"
-brew "gnu-sed"
 brew "neovim"
 brew "node"
 brew "ranger"
@@ -24,6 +20,7 @@ brew "tmux"
 brew "trash"
 brew "zsh"
 
+cask "cursor"
 cask "google-chrome"
 cask "iterm2"
 cask "obsidian"
