--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -7,6 +7,7 @@ brew "exa"
 brew "fzf"
 brew "gh"
 brew "git"
+brew "gitui"
 brew "neovim"
 brew "node"
 brew "ranger"
@@ -15,7 +16,6 @@ brew "rlwrap"
 brew "romkatv/powerlevel10k/powerlevel10k"
 brew "source-highlight"
 brew "the_silver_searcher"
-brew "tig"
 brew "tmux"
 brew "trash"
 brew "zsh"
