--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -3,7 +3,7 @@ tap "homebrew/cask-fonts"
 
 brew "bat"
 brew "dust"
-brew "exa"
+brew "eza"
 brew "fzf"
 brew "gh"
 brew "git"
@@ -21,8 +21,12 @@ brew "trash"
 brew "zsh"
 
 cask "cursor"
+cask "discord"
+cask "docker"
+cask "dropbox"
 cask "font-sauce-code-pro-nerd-font"
 cask "google-chrome"
 cask "iterm2"
 cask "obsidian"
 cask "raycast"
+cask "simplenote"
