--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -9,7 +9,7 @@ brew "gh"
 brew "git"
 brew "gitui"
 brew "neovim"
-brew "node"
+brew "nvm"
 brew "ranger"
 brew "reattach-to-user-namespace"
 brew "rlwrap"
@@ -18,6 +18,7 @@ brew "source-highlight"
 brew "the_silver_searcher"
 brew "tmux"
 brew "trash"
+brew "yarn"
 brew "zsh"
 
 cask "cursor"
@@ -27,6 +28,7 @@ cask "dropbox"
 cask "font-sauce-code-pro-nerd-font"
 cask "google-chrome"
 cask "iterm2"
+cask "karabiner-elements"
 cask "obsidian"
 cask "raycast"
 cask "simplenote"
