--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -15,6 +15,7 @@ brew "reattach-to-user-namespace"
 brew "rlwrap"
 brew "romkatv/powerlevel10k/powerlevel10k"
 brew "source-highlight"
+brew "terminal-notifier"
 brew "the_silver_searcher"
 brew "tmux"
 brew "trash"
