--- a/zed/settings.json
+++ b/zed/settings.json
@@ -8,12 +8,22 @@
 // from the command palette or from `Zed` application menu.
 {
   "base_keymap": "VSCode",
-  "vim_mode": true,
-  "ui_font_size": 16,
+  "buffer_font_family": "Monaco",
   "buffer_font_size": 14,
+  "soft_wrap": "editor_width",
+  "tab_bar": {
+    // Whether or not to show the navigation history buttons.
+    "show_nav_history_buttons": false
+  },
+  "tabs": {
+    // Show git status colors in the editor tabs.
+    "git_status": true
+  },
   "theme": {
     "mode": "system",
     "light": "One Light",
     "dark": "One Dark"
-  }
+  },
+  "ui_font_size": 16,
+  "vim_mode": true
 }
