[mac] zedやめてcursorに戻す

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -22,6 +22,7 @@ brew "trash"
 brew "yarn"
 brew "zsh"
 
+cask "cursor"
 cask "discord"
 cask "docker"
 cask "dropbox"
@@ -32,4 +33,3 @@ cask "karabiner-elements"
 cask "obsidian"
 cask "raycast"
 cask "simplenote"
-cask "zed"
