--- a/.tmux.conf
+++ b/.tmux.conf
@@ -250,6 +250,12 @@ set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'roosta/tmux-pop'
+set -g @plugin 'wfxr/tmux-power'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+set -g @tmux_power_theme 'everforest'
+# 'L' for left only, 'R' for right only and 'LR' for both
+set -g @tmux_power_prefix_highlight_pos 'L'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
