--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -7,7 +7,8 @@ brew "eza"
 brew "fzf"
 brew "gh"
 brew "git"
-brew "gitui"
+brew "git-delta"
+brew "lazygit"
 brew "neovim"
 brew "nvm"
 brew "ranger"
