--- a/gitfiles/lazygit/config.yml
+++ b/gitfiles/lazygit/config.yml
@@ -9,8 +9,8 @@ git:
   allBranchesLogCmd: git log --graph --color=always --date=format:'%Y-%m-%d %H:%M' --pretty=format:'%C(#a0a0a0 reverse)%h%Creset %C(cyan)%ad%Creset %C(#dd4814)%ae%Creset %C(yellow reverse)%d%Creset %n%C(white bold)%s%Creset%n' --
   branchLogCmd: git log --graph --color=always --date=format:'%Y-%m-%d %H:%M' --pretty=format:'%C(#a0a0a0 reverse)%h%Creset %C(cyan)%ad%Creset %C(#dd4814)%ae%Creset %C(yellow reverse)%d%Creset %n%C(white bold)%s%Creset%n' {{branchName}} --
 
-customCommands:
-  - key: 'c'
-    context: 'files'
-    command: "git commit -v"
-    subprocess: true
+# customCommands:
+#   - key: 'c'
+#     context: 'files'
+#     command: "git commit"
+#     subprocess: true
