[shell] CLIコマンド追加

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -2,14 +2,19 @@ tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 
 brew "actionlint"
+brew "aria2"
 brew "bat"
+brew "duf"
 brew "dust"
 brew "eza"
 brew "fzf"
 brew "gh"
 brew "git"
 brew "git-delta"
+brew "glances"
 brew "hadolint"
+brew "httpie"
+brew "lazydocker"
 brew "lazygit"
 brew "neovim"
 brew "nvm"
@@ -20,9 +25,11 @@ brew "romkatv/powerlevel10k/powerlevel10k"
 brew "source-highlight"
 brew "terminal-notifier"
 brew "the_silver_searcher"
+brew "tldr"
 brew "tmux"
 brew "trash"
 brew "yarn"
+brew "zoxide"
 brew "zsh"
 
 cask "cursor"
