--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,18 @@
 [submodule "submodules/zsh-bd"]
 	path = submodules/zsh-bd
 	url = https://github.com/Tarrasch/zsh-bd
+  ignore = untracked
 [submodule "submodules/zaw"]
 	path = submodules/zaw
 	url = https://github.com/zsh-users/zaw
+  ignore = untracked
 [submodule "submodules/f-sy-h"]
 	path = submodules/f-sy-h
 	url = https://github.com/z-shell/F-Sy-H
 [submodule "submodules/zsh-background-notify"]
 	path = submodules/zsh-background-notify
 	url = https://github.com/t413/zsh-background-notify.git
+  ignore = untracked
 [submodule "submodules/zsh-snap"]
 	path = submodules/zsh-snap
 	url = https://github.com/marlonrichert/zsh-snap.git
