[shell] agからripgrepに移行

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -21,11 +21,11 @@ brew "neovim"
 brew "nvm"
 brew "ranger"
 brew "reattach-to-user-namespace"
+brew "ripgrep"
 brew "rlwrap"
 brew "romkatv/powerlevel10k/powerlevel10k"
 brew "source-highlight"
 brew "terminal-notifier"
-brew "the_silver_searcher"
 brew "tldr"
 brew "tmux"
 brew "trash"
