[vim] lazy-lock.jsonをgitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
 .DS_Store
-.emacs.d/elpa
-.emacs.d/history
-.emacs.d/server
-.frameposize
-.mc-lists.el
-.vimwinpos
-auto-save-list
 npm-debug.log
-texput.log
-vimfiles/.vim/bundle/
+submodules/*
 vimfiles/nvim/.backup
 vimfiles/nvim/.swp
 vimfiles/nvim/.undo
-vimfiles/dein/nvim/bundle/
-vimfiles/dein/vim/bundle/
-submodules/*
+vimfiles/nvim/lazy-lock.json
 *.zwc
