--- a/.tmux.conf
+++ b/.tmux.conf
@@ -253,7 +253,7 @@ set -g @plugin 'roosta/tmux-pop'
 set -g @plugin 'wfxr/tmux-power'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
-set -g @tmux_power_theme 'everforest'
+set -g @tmux_power_theme 'moon'
 # 'L' for left only, 'R' for right only and 'LR' for both
 set -g @tmux_power_prefix_highlight_pos 'L'
 
