--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -32,12 +32,14 @@ brew "yarn"
 brew "zoxide"
 brew "zsh"
 
+cask "alt-tab"
 cask "cursor"
 cask "discord"
 cask "docker"
 cask "dropbox"
 cask "font-sauce-code-pro-nerd-font"
 cask "google-chrome"
+cask "homerow"
 cask "iterm2"
 cask "karabiner-elements"
 cask "obsidian"
