[tmux] tmux-menu

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -252,7 +252,12 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'roosta/tmux-pop'
 set -g @plugin 'wfxr/tmux-power'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'jaclu/tmux-menus'
 
+# tmux-menus
+set -g @menus_trigger Space
+
+# tmux-power
 set -g @tmux_power_theme 'moon'
 # 'L' for left only, 'R' for right only and 'LR' for both
 set -g @tmux_power_prefix_highlight_pos 'L'
