--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -42,6 +42,7 @@ cask "google-chrome"
 cask "homerow"
 cask "iterm2"
 cask "karabiner-elements"
+cask "meetingbar"
 cask "obsidian"
 cask "raycast"
 cask "simplenote"
