--- a/gitfiles/.gitconfig
+++ b/gitfiles/.gitconfig
@@ -39,6 +39,9 @@
   add-cancel = reset HEAD
   bs = bisect
   sw = switch
+  # https://stackoverflow.com/questions/8475448/find-merge-commit-which-includes-a-specific-commit
+  find-merge = "!sh -c 'commit=$0 && branch=${1:-HEAD} && (git rev-list $commit..$branch --ancestry-path | cat -n; git rev-list $commit..$branch --first-parent | cat -n) | sort -k2 -s | uniq -f1 -d | sort -n | tail -1 | cut -f2'"
+  show-merge = "!sh -c 'merge=$(git find-merge $0 $1) && [ -n \"$merge\" ] && git show $merge'"
 
   ; http://qiita.com/peccul/items/90dd469e2f72babbc106
   today = log --oneline --since='12 hour ago'
