--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -34,6 +34,7 @@ brew "zsh"
 
 cask "alt-tab"
 cask "cursor"
+cask "dimentium/autoraise/autoraiseapp"
 cask "discord"
 cask "docker"
 cask "dropbox"
