--- a/.tmux.conf
+++ b/.tmux.conf
@@ -153,6 +153,7 @@ set-window-option -g mode-keys vi
 # http://superuser.com/questions/397076/tmux-exits-with-exited-on-mac-os-x
 ## クリップボード共有を有効にする
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-environment -g IS_WARP $IS_WARP
 ## コピーモードの操作をvi風に設定する
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
