--- a/.cz.toml
+++ b/.cz.toml
@@ -14,6 +14,8 @@ schema_pattern = "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert
 type = "list"
 name = "change_type"
 message = "Select the type of change you are committing:"
+use_search_filter = true
+use_jk_keys = false
 choices = [
     {value = "feat", name = "feat: A new feature"},
     {value = "fix", name = "fix: A bug fix"},
@@ -32,6 +34,8 @@ choices = [
 type = "list"
 name = "scope"
 message = "What is the scope of this change? (select directory): (press [enter] to skip)"
+use_search_filter = true
+use_jk_keys = false
 choices = [
     {value = "ai", name = "ai: AI assistant configurations"},
     {value = "bin", name = "bin: Binary files and executables"},
